# django_template

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  bun.lockb  docker-compose.yml  entrypoint.sh  package.json  pyproject.toml  shell.nix
app/app/: middleware.py  settings.py  urls.py
app/app/utils/: HtmxHttpRequest.py  Pagination.py  Queries.py
app/base/static/js/htmx-ext/: django-toolbar.js
app/base/templates/base/: base.html  landing_page.html  pagination.html  sidebar.html
app/home/: urls.py  views.py
app/home/templates/home/: home.html  index.html
app/landing_page/: urls.py  views.py
app/landing_page/templates/landing_page/: index.html  login.html
app/master_data/: urls.py
app/master_data/migrations/: 0001_initial.py  0002_auto_20240308_0631.py
app/master_data/queries/: province.py
app/master_data/templates/master_data/province/: add.html  index.html  loader.html  table.html
app/master_data/tests/: test_provinces.py
app/master_data/views/: province.py
docker/: app.dockerfile  static.dockerfile
