[tool.poetry]
name = "django-template"
version = "0.1.0"
description = "Django template project."
authors = ["IMP Studio"]
license = "MIT"
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.12"
Django = "^4.2.7"
granian = "^0.7.1"
django-environ = "^0.11.2"
psycopg-binary = "^3.1.12"
psycopg2-binary = "^2.9.9"
fontawesomefree = "6.5.1"
django-htmx = "1.17.3"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.3"
interrogate = "^1.5.0"
djhtml = "^3.0.6"
setuptools = "^68.2.2"
django-extensions = "^3.2.3"
django-debug-toolbar = "4.3"
selenium = "4.18.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
