[project]
name = "django-template"
version = "0.2.0"
description = "Django template project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django==5.1.2",
    "django-environ==0.11.2",
    "django-htmx==1.17.3",
    "fontawesomefree==6.5.1",
    "granian==0.7.6",
    "psycopg2-binary==2.9.10",
    "setuptools==75.2.0",
]

[tool.uv]
dev-dependencies = [
    "django-debug-toolbar==4.4.6",
    "django-extensions==3.2.3",
    "djhtml==3.0.6",
    "interrogate==1.7.0",
    "pytest==8.3.3",
    "ruff==0.6.9",
    "selenium==4.25.0",
]
